Added a provision for braziers to permanently activate their target, if set to do so by their controller.

--- a/data/level/Seaside/wandering-passage.cfg
+++ b/data/level/Seaside/wandering-passage.cfg
@@ -11,6 +11,12 @@
 			"custom": true,
 			"is_human": true,
 			"label": "_fcd2bf2",
+			"property_data": {
+				"stored_events": {
+					"": 0,
+					"started_game": 1
+				}
+			},
 			"type": "frogatto_playable",
 			"x": 544,
 			"y": 384
@@ -350,6 +356,8 @@
 				"_move_x2": 3590,
 				"_move_y1": 31,
 				"_move_y2": 30,
+				"actual_speed": 1.034478,
+				"event": "wandering-passage-platform-active",
 				"is_zipline": false,
 				"rope_height": 68,
 				"stopped": 0,
@@ -1513,16 +1521,162 @@
 			"custom": true,
 			"label": "_7bf120c9",
 			"property_data": {
-				"shadow_opacity": 0.75,
 				"shadow_color": {
-					"r": 0.070588,
+					"b": 0.058823,
 					"g": 0.007843,
-					"b": 0.058823
-				}
+					"r": 0.070588
+				},
+				"shadow_opacity": 0.75
 			},
 			"type": "shadow_effect_controller",
 			"x": 437,
 			"y": 245
+		},
+		{
+			"_uuid": "4a6f16aff85e453d86a5f38871e81fa2",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_255a09ab",
+			"property_data": {
+				"event": "wandering-passage-platform-active",
+				"original_level_we_spawned_on": "wandering-passage.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": 1992,
+			"y": 361
+		},
+		{
+			"_uuid": "1d1edbf464dc4f18adf3222213748067",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_50c2ddc5",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": 2228,
+			"y": 340
+		},
+		{
+			"_uuid": "b358559c9b2d488491babc9cb1dc7741",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2f114875",
+			"property_data": {
+				"event": "wandering-passage-platform-active",
+				"original_level_we_spawned_on": "wandering-passage.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": 1271,
+			"y": 387
+		},
+		{
+			"_uuid": "b5c8feb72ded4b30ad1827a0a530b215",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6408a84",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": 1251,
+			"y": 401
+		},
+		{
+			"_uuid": "d8708097b0994bba97555cf74f734a29",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_339b0f5e",
+			"type": "scaffolding_platform6",
+			"x": 1133,
+			"y": 408
+		},
+		{
+			"_uuid": "ea3cf3dc748249c8a42a701ed1d4ed6b",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2b6f9b50",
+			"type": "scaffolding_platform7",
+			"x": 1254,
+			"y": 446
+		},
+		{
+			"_uuid": "6ee2c543a1ae4178b92ad436d91bbc9f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6103a8b1",
+			"type": "scaffolding_platform4",
+			"x": 778,
+			"y": 459
+		},
+		{
+			"_uuid": "0a3280d92a4b49bab92f27cca4b70857",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5486c4b0",
+			"type": "scaffolding_platform1",
+			"x": 816,
+			"y": 432
+		},
+		{
+			"_uuid": "e17d8839b3ca44d882783bf7875d18dc",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1adf842a",
+			"type": "scaffolding_platform2",
+			"x": 1558,
+			"y": 466
+		},
+		{
+			"_uuid": "bce795f6af184c39a243d60e3951862c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_61831ce9",
+			"type": "scaffolding_platform4",
+			"x": 1642,
+			"y": 458
+		},
+		{
+			"_uuid": "9590b0db391d47ce9bd227cd8d984958",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_34b4d2d3",
+			"property_data": {
+				"burnout_cooldown": 900,
+				"event": "wandering-passage-platform-active",
+				"make_event_permanent": true,
+				"original_level_we_spawned_on": "wandering-passage.cfg"
+			},
+			"type": "brazier_temporary_coordinator",
+			"x": 1534,
+			"y": 355
+		},
+		{
+			"_uuid": "db73005d92b04c6e87bb34038f0b0ceb",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_731de5fd",
+			"property_data": {
+				"_x2_bound": 2304,
+				"_x_bound": 2128,
+				"_y2_bound": -128,
+				"_y_bound": -224
+			},
+			"type": "secret_passage_controller",
+			"x": 2144,
+			"y": -224
 		}
 	],
 	"dimensions": [-64,-928,5984,809],
@@ -1692,9 +1846,9 @@
 ,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,crk,crk,crk,crk,crk,crk,crk,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,crk,crk,crk,crk,crk,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,crk,crk,crk,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
-,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
+,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,,,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
 ,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,,,,,,,,,,crk,crk,crk,,,,,,,,,,,,,,,,,,,,,,,,,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,,,,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk,crk
@@ -1781,16 +1935,6 @@
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
 		},
 		{
 			"tiles": "",
