--- a/data/object_prototypes/general/switches_and_triggers/pullable_coordinator.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable_coordinator.cfg
@@ -21,7 +21,10 @@ properties: {
 	visually_turn_off: "commands :: [sound('switch.wav')]", 
 
 
-	should_this_be_active: "bool :: size(activated) = size(monitoring)",
+	should_this_be_active: "bool :: if((event_is_irreversible and (_event != default_event_state)),
+										bool(_event),
+										size(activated) = size(monitoring)
+									)",
 
 
 #-------------------------- coordination logic --------------------------#
