--- a/data/objects/props-interactive/misc/brazier_temporary_coordinator.cfg
+++ b/data/objects/props-interactive/misc/brazier_temporary_coordinator.cfg
@@ -7,14 +7,24 @@ properties: {
 	shadow_controller: "obj shadow_effect_controller|null :: find(level.chars, value is obj shadow_effect_controller)",
 
 #-------------------------- pullable logic --------------------------#
+	custom_update_logic: "calculate_shadow_brightness",
+
+	event_is_irreversible: "bool :: make_event_permanent",
+
+#-------------------------- custom logic --------------------------#
 	calculate_shadow_brightness: "commands :: if(shadow_controller, set(shadow_controller.opacity_coefficient, desired_shadow_opacity))",
 
 	desired_shadow_opacity: "decimal :: lib.math.ease_out_sine( (1.0 - fraction) )
 		where fraction = decimal(size(activated))/decimal(size(monitoring)) * 0.70",
 	
-	custom_update_logic: "calculate_shadow_brightness",
 
 	burnout_cooldown: { type: "int", init: "(60 * 15)", editor_info: { type: "int" }},
+	
+	
+	
+	
+	
+	make_event_permanent: { type:"bool", default: false, editor_info: { type: "boolean", value: "false" } },
 },
 
 
