Eliminated some bogus editor classes used by test objects.

--- a/data/objects/props-interactive/misc/indicator_light_metal.cfg
+++ b/data/objects/props-interactive/misc/indicator_light_metal.cfg
@@ -2,9 +2,12 @@
 id: "indicator_light_metal",
 prototype: ["triggerable"],
 zorder: "@include data/zorder.cfg:elevator_shafts",
+
 editor_info: {
-	category: '',
+	category: "keys & triggers",
+	help: "A light that can be placed to automatically indicate the state of any event.  Auto-placed by metal switches, but available for anything.",
 },
+
 properties: {
 	is_active: "if(event = '', true, bool(event_status))",
 	event: { type: "string", default:"''", editor_info: null },
