Made sure the new part of the HUD is in the mana bar's destructor.

--- a/data/objects/gui-components/hud-components/mana_display.cfg
+++ b/data/objects/gui-components/hud-components/mana_display.cfg
@@ -54,6 +54,7 @@
 
 	
 	on_being_removed: "[
+		remove_object(mana_bar_container_overlay),
 		remove_object(mana_bar_container),
 		remove_object(mana_bar_center),
 		remove_object(mana_bar_top),
