--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1614,6 +1614,7 @@ properties: {
 
 
 	hud_types_omitted_from_scaling: "[string] :: [
+		'mana_display.bar_container_overlay',
 		'mana_display.bar_container',
 		'mana_display.bar_center',
 		'mana_display.bar_center',
