Set up the mine hint to not fire once you've beaten the gazer boss.

--- a/data/level/Forest/twisted-trees.cfg
+++ b/data/level/Forest/twisted-trees.cfg
@@ -2737,15 +2737,14 @@
 			"label": "chat_block",
 			"type": "breakable_block_energy_blue",
 			"on_chat": "speech_dialog(level.player,
-                            if(prospera,
-                                speech_dialog([~Prospera said to go into the mines.~], [~That's where I'll find the eyeball.~]),
-                                if(imoti,
-                                    speech_dialog([~This must be the forcefield Imoti meant.~]),
-                                    speech_dialog(level.player, [~Huh...  What's this now?~]),
-                                ),
-                            )
-                        ) where imoti=level.player.get_stored_event('introduced_to_imoti'),
-                          where prospera=level.player.get_stored_event('finished_initial_prospera_conversation')",
+							if(level.player.get_stored_event('finished_initial_prospera_conversation'),
+								speech_dialog([~Prospera said to go into the mines.~], [~That's where I'll find that eyeball ... thing.~]),
+								if(level.player.get_stored_event('introduced_to_imoti'),
+									speech_dialog([~This must be the forcefield Imoti meant.~]),
+									speech_dialog(level.player, [~Huh...  What's this now?~]),
+								),
+							)
+						)",
 			"x": 3136,
 			"y": 384
 		},
@@ -2755,9 +2754,11 @@
 			"custom": true,
 			"label": "wall_hints",
 			"on_triggered": "[
-                                 remove_object(self),
-                                 fire_event(get_object_or_die(level,'chat_block'), 'chat')
-                             ]",
+								remove_object(me),
+								if(not level.player.get_stored_event('defeated_gazer_boss') = 1,
+									 fire_event(get_object_or_die(level,'chat_block'), 'chat')
+								)
+							 ]",
 			"property_data": {
 				"_x2_bound": 3168,
 				"_x_bound": 2944,
