Hid the whitewater controller again.

--- a/data/objects/effects/liquids/whitewater_controller.cfg
+++ b/data/objects/effects/liquids/whitewater_controller.cfg
@@ -2,7 +2,7 @@
 id: "whitewater_controller",
 prototype: ["liquid"],
 zorder: "@include data/zorder.cfg:in_front_of_everything",
-hidden_in_game: false,
+hidden_in_game: true,
 properties: {
 	liquid_texture: "string :: 'liquids/whitewater-overlay.png'",
 	liquid_damage: "kill_anything",
