Fixed a missing initializer in the liquid controller which meant liquids couldn't be placed in the editor.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -102,10 +102,10 @@ properties: {
 
 
 #-------------------------- vars --------------------------#
-	_x_bound: { type: "int", editor_info: { type: "x", value: "x-100" } },
-	_x2_bound: { type: "int", editor_info: { type: "x", value: "x+150" } },
-	_y_bound: { type: "int", editor_info: { type: "y", value: "y-100" } },
-	_y2_bound: { type: "int", editor_info: { type: "y", value: "y+150" } },
+	_x_bound: { type: "int", editor_info: { type: "x", value: "x-100" }, default: 0 },
+	_x2_bound: { type: "int", editor_info: { type: "x", value: "x+150" }, default: 0 },
+	_y_bound: { type: "int", editor_info: { type: "y", value: "y-100" }, default: 0 },
+	_y2_bound: { type: "int", editor_info: { type: "y", value: "y+150" }, default: 0 },
 },
 
 editor_info: {
