Added some of the coral pieces to nene's house.

--- a/data/level/Seaside/to-nenes-house.cfg
+++ b/data/level/Seaside/to-nenes-house.cfg
@@ -2614,6 +2614,97 @@
 			"type": "seaside_decor_fence1",
 			"x": 1217,
 			"y": 237
+		},
+		{
+			"_uuid": "fe77fca7ec3c46fb903e148a86b7b8d5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_31949c53",
+			"type": "coral_background1",
+			"x": 849,
+			"y": 963
+		},
+		{
+			"_uuid": "1c472bb144b947f4b897379eb29b6593",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_6457f85f",
+			"rotate": 12.079836,
+			"type": "coral_background1",
+			"upside_down": true,
+			"x": 1356,
+			"y": 809
+		},
+		{
+			"_uuid": "d387a26be44941d59fa56aacc1b7b18d",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_35ddc96e",
+			"rotate": 48.070178,
+			"type": "coral_background1",
+			"x": 174,
+			"y": 927
+		},
+		{
+			"_uuid": "d9298325ee914b8999874da223319162",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_32636824",
+			"type": "coral_background1",
+			"x": 1802,
+			"y": 1103
+		},
+		{
+			"_uuid": "887f6b08c7a54a47ae42da67ecc0fadc",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_65e5368c",
+			"rotate": 28.891759,
+			"type": "coral_background1",
+			"x": 701,
+			"y": 1032
+		},
+		{
+			"_uuid": "c015fba1f469427b912046fe9e8c9794",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1a1a19fa",
+			"rotate": -99.707107,
+			"type": "coral_background2",
+			"x": 1335,
+			"y": 673
+		},
+		{
+			"_uuid": "74f3cd87e5ea4eb39953e94f8f9c9dd3",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5e716ea7",
+			"rotate": -21.974508,
+			"type": "coral_background2",
+			"x": 555,
+			"y": 996
+		},
+		{
+			"_uuid": "8925cb2e614049ddab5b5f8a21261822",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2deeeb12",
+			"rotate": -225.0,
+			"type": "coral_background2",
+			"x": 1082,
+			"y": 734
+		},
+		{
+			"_uuid": "21c3b54d045d478ba194314454c5e469",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_62e3bef1",
+			"rotate": -22.5,
+			"type": "coral_background2",
+			"x": 1323,
+			"y": 1024
 		}
 	],
 	"dimensions": [-2272,-544,5247,1667],
