Added the corals to a few seaside levels.

--- a/data/level/Seaside/splash-hop.cfg
+++ b/data/level/Seaside/splash-hop.cfg
@@ -2338,8 +2338,8 @@
 				}
 			},
 			"type": "frogatto_playable",
-			"x": -2136,
-			"y": 482
+			"x": 768,
+			"y": 576
 		},
 		{
 			"_uuid": "5824fd84d8494220a7c22c83faea2e43",
@@ -2361,6 +2361,28 @@
 			"type": "platform_swaying_vertical",
 			"x": 4301,
 			"y": -463
+		},
+		{
+			"_uuid": "72262e7859b54c83a76d6fa45d97c8f2",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_28af441a",
+			"rotate": -22.5,
+			"type": "coral_background1",
+			"x": 1338,
+			"y": 663
+		},
+		{
+			"_uuid": "ca390c58d0624606ad75692e92def216",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_5061fc85",
+			"rotate": 45.0,
+			"type": "coral_background1",
+			"x": 2221,
+			"y": 661
 		}
 	],
 	"dimensions": [-2240,-1088,5794,991],
@@ -2374,6 +2396,23 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
+			{
+				"_uuid": "422c5186a43b4b87885c58461352f141",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"draw_color": {
+					"add": [4.011764,4.011764,4.011764,1.0],
+					"mul": [1.0,1.0,1.0,1.0]
+				},
+				"label": "_499b",
+				"parent": "deserialize('0c7bf05387cc40d588bdf0b3205e81b7')",
+				"relative_x": 0,
+				"relative_y": 0,
+				"type": "breakable_block_burnable.top",
+				"x": 4880,
+				"y": 176
+			},
 			{
 				"_uuid": "a8127207cec24f7481a64909f6cfdb6a",
 				"current_frame": "normal",
@@ -2401,23 +2440,6 @@
 				"type": "breakable_block_burnable.top",
 				"x": 4880,
 				"y": 32
-			},
-			{
-				"_uuid": "422c5186a43b4b87885c58461352f141",
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"draw_color": {
-					"add": [4.011764,4.011764,4.011764,1.0],
-					"mul": [1.0,1.0,1.0,1.0]
-				},
-				"label": "_499b",
-				"parent": "deserialize('0c7bf05387cc40d588bdf0b3205e81b7')",
-				"relative_x": 0,
-				"relative_y": 0,
-				"type": "breakable_block_burnable.top",
-				"x": 4880,
-				"y": 176
 			},
 			{
 				"_uuid": "9923ce9e2b9a4f3a8b57327fba25d9e7",
