--- a/data/level/Seaside/to-nenes-house.cfg
+++ b/data/level/Seaside/to-nenes-house.cfg
@@ -965,7 +965,8 @@
 			"label": "_4ea7a3bb",
 			"type": "rock_background_cubic2",
 			"x": 292,
-			"y": 1017
+			"y": 1017,
+			"zsub_order": 2
 		},
 		{
 			"_uuid": "0d696acf179e47b6a3911d2d5ef50a4e",
@@ -2705,6 +2706,40 @@
 			"type": "coral_background2",
 			"x": 1323,
 			"y": 1024
+		},
+		{
+			"_uuid": "5f426b55ba504ca49fb1332834a6c98c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1d861623",
+			"rotate": -12.397975,
+			"type": "coral_background3",
+			"x": 1190,
+			"y": 1154,
+			"zsub_order": 1
+		},
+		{
+			"_uuid": "05c3878495d24533b64652aeb415570e",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_7c8f6e77",
+			"rotate": -19.855041,
+			"type": "coral_background3",
+			"x": 403,
+			"y": 1137,
+			"zsub_order": 3
+		},
+		{
+			"_uuid": "131154e879ce447aae1ca2c89556c1c7",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_1334d898",
+			"rotate": -22.5,
+			"type": "coral_background3",
+			"x": 1906,
+			"y": 1107
 		}
 	],
 	"dimensions": [-2272,-544,5247,1667],
@@ -2718,60 +2753,6 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
-			{
-				"_uuid": "08d3282af872422291b0cced9b6f3b76",
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 1799,
-				"label": "_17892350",
-				"property_data": {
-					"_x2_bound": 3975,
-					"_x_bound": 2408,
-					"_y2_bound": 947,
-					"_y_bound": 651
-				},
-				"time_in_frame": 799,
-				"type": "water_controller_ocean",
-				"x": 2432,
-				"y": 640
-			},
-			{
-				"_uuid": "68fff5c2be4e4500a8e3afe8cefc40c7",
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 1799,
-				"label": "_5a64993e",
-				"property_data": {
-					"_x2_bound": 3808,
-					"_x_bound": 3296,
-					"_y2_bound": 898,
-					"_y_bound": 651
-				},
-				"time_in_frame": 799,
-				"type": "water_controller_ocean",
-				"x": 3296,
-				"y": 480
-			},
-			{
-				"_uuid": "4e7cd95e2a854ad99b83dd54124e9272",
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"cycle": 1799,
-				"label": "_759cfb78",
-				"property_data": {
-					"_x2_bound": 1693,
-					"_x_bound": 32,
-					"_y2_bound": 1488,
-					"_y_bound": 653
-				},
-				"time_in_frame": 799,
-				"type": "water_controller_ocean",
-				"x": 32,
-				"y": 640
-			},
 			{
 				"_uuid": "7a3a053c41f14859a3386a475ef06040",
 				"created": true,
@@ -2807,6 +2788,60 @@
 				"type": "water_controller_ocean",
 				"x": 1664,
 				"y": 576
+			},
+			{
+				"_uuid": "4e7cd95e2a854ad99b83dd54124e9272",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 1799,
+				"label": "_759cfb78",
+				"property_data": {
+					"_x2_bound": 1693,
+					"_x_bound": 32,
+					"_y2_bound": 1488,
+					"_y_bound": 653
+				},
+				"time_in_frame": 799,
+				"type": "water_controller_ocean",
+				"x": 32,
+				"y": 640
+			},
+			{
+				"_uuid": "68fff5c2be4e4500a8e3afe8cefc40c7",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 1799,
+				"label": "_5a64993e",
+				"property_data": {
+					"_x2_bound": 3808,
+					"_x_bound": 3296,
+					"_y2_bound": 898,
+					"_y_bound": 651
+				},
+				"time_in_frame": 799,
+				"type": "water_controller_ocean",
+				"x": 3296,
+				"y": 480
+			},
+			{
+				"_uuid": "08d3282af872422291b0cced9b6f3b76",
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"cycle": 1799,
+				"label": "_17892350",
+				"property_data": {
+					"_x2_bound": 3975,
+					"_x_bound": 2408,
+					"_y2_bound": 947,
+					"_y_bound": 651
+				},
+				"time_in_frame": 799,
+				"type": "water_controller_ocean",
+				"x": 2432,
+				"y": 640
 			}
 		]
 	},
