--- a/data/level/Seaside/burn-and-bubble.cfg
+++ b/data/level/Seaside/burn-and-bubble.cfg
@@ -535,8 +535,8 @@
 			"custom": true,
 			"label": "_1465789a",
 			"type": "rock_background_cubic1",
-			"x": 957,
-			"y": 551
+			"x": 998,
+			"y": 534
 		},
 		{
 			"_uuid": "26da4fa7bfb5457390e8eaf98e43c1b9",
@@ -2198,6 +2198,106 @@
 			"type": "save_statue",
 			"x": 1338,
 			"y": -891
+		},
+		{
+			"_uuid": "a67fac3514324d758a3d364d8681f7bb",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_491a53c6",
+			"rotate": 22.5,
+			"type": "coral_background1",
+			"x": 1279,
+			"y": 943
+		},
+		{
+			"_uuid": "ee3ef9e017b24e3c93406612eda773eb",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_3710bef6",
+			"rotate": 27.07349,
+			"type": "coral_background3",
+			"x": 1112,
+			"y": 985
+		},
+		{
+			"_uuid": "6757758701a14ef681fadc90eef8355a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_69e37986",
+			"type": "coral_background2",
+			"x": 555,
+			"y": 864
+		},
+		{
+			"_uuid": "008ba53809554e519fbac43cd0b1d907",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_1c3175c3",
+			"type": "coral_background3",
+			"x": 585,
+			"y": 1008
+		},
+		{
+			"_uuid": "a457218072f0446ab70f2f855c6fe1e4",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_25797b73",
+			"rotate": 67.5,
+			"type": "coral_background2",
+			"x": 334,
+			"y": 681
+		},
+		{
+			"_uuid": "9684e637dba14a68861fb7e488ce8a66",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_214b6170",
+			"rotate": -166.994583,
+			"type": "coral_background3",
+			"x": 829,
+			"y": 645,
+			"zsub_order": 1
+		},
+		{
+			"_uuid": "62875dd96d06416c99f70ffdb8a3db1a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_695bceb7",
+			"rotate": -67.5,
+			"type": "coral_background1",
+			"x": 2675,
+			"y": 810
+		},
+		{
+			"_uuid": "e0d5dcd0d219444f88b42644bf8b15cf",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_4b54c9eb",
+			"type": "coral_background3",
+			"upside_down": true,
+			"x": 2457,
+			"y": 837
+		},
+		{
+			"_uuid": "77ad74d5d89d48da86d93824f059c9f2",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_359dca4",
+			"rotate": 8.237815,
+			"type": "coral_background3",
+			"x": 2561,
+			"y": 994
+		},
+		{
+			"_uuid": "04eab5a9b6d141cb8732681d7fb9be37",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_76a92fed",
+			"type": "coral_background1",
+			"x": 2003,
+			"y": 954
 		}
 	],
 	"dimensions": [-2048,-2560,3947,1295],
@@ -2211,23 +2311,6 @@
 	"segment_width": 0,
 	"serialized_objects": {
 		"character": [
-			{
-				"_uuid": "b464c2272d79450cb534cf306c4839f8",
-				"activation_area": [1934,553,3723,1290],
-				"created": true,
-				"current_frame": "normal",
-				"custom": true,
-				"label": "_dd0e689",
-				"property_data": {
-					"_x2_bound": 3674,
-					"_x_bound": 1984,
-					"_y2_bound": 1291,
-					"_y_bound": 653
-				},
-				"type": "water_controller_ocean",
-				"x": 1984,
-				"y": 672
-			},
 			{
 				"_uuid": "43fbde5397ea482ea75adaa3225bafc1",
 				"activation_area": [-114,553,1989,1321],
@@ -2246,6 +2329,23 @@
 				"type": "water_controller_ocean",
 				"x": -64,
 				"y": 640
+			},
+			{
+				"_uuid": "b464c2272d79450cb534cf306c4839f8",
+				"activation_area": [1934,553,3723,1290],
+				"created": true,
+				"current_frame": "normal",
+				"custom": true,
+				"label": "_dd0e689",
+				"property_data": {
+					"_x2_bound": 3674,
+					"_x_bound": 1984,
+					"_y2_bound": 1291,
+					"_y_bound": 653
+				},
+				"type": "water_controller_ocean",
+				"x": 1984,
+				"y": 672
 			}
 		]
 	},
@@ -2685,16 +2785,6 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "player"
 		},
 		{
 			"tiles": "",
