Added the underwater plants to the rest of the seaside levels.

--- a/data/level/Seaside/downhill.cfg
+++ b/data/level/Seaside/downhill.cfg
@@ -1607,6 +1607,24 @@
 			"type": "brambles-floor_7",
 			"x": 5793,
 			"y": 1023
+		},
+		{
+			"_uuid": "c4e3b74ffd6443b5bd0c2de8247ece9f",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_ee268d4",
+			"type": "coral_background1",
+			"x": 3903,
+			"y": 631
+		},
+		{
+			"_uuid": "e3c4fb56712843758033453b9852e811",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_24837115",
+			"type": "coral_background1",
+			"x": 5074,
+			"y": 947
 		}
 	],
 	"dimensions": [0,-800,7615,1855],
