--- a/data/level/Seaside/flooded-caverns.cfg
+++ b/data/level/Seaside/flooded-caverns.cfg
@@ -31,7 +31,6 @@
 			"label": "_7c58fd05",
 			"property_data": {
 				"_x2_bound": 8064,
-				"_x_bound": 0,
 				"_y2_bound": 1968,
 				"_y_bound": 652
 			},
@@ -1957,6 +1956,163 @@
 			"type": "brambles-wall_7",
 			"x": 1793,
 			"y": 1058
+		},
+		{
+			"_uuid": "28a488ca95ab4525b1ea49e820ae67c5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6d8f618f",
+			"type": "coral_background1",
+			"x": 5520,
+			"y": 1016
+		},
+		{
+			"_uuid": "688c837a9b5d47a5ad49bd896a3fd384",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_20a38457",
+			"type": "coral_background2",
+			"upside_down": true,
+			"x": 5493,
+			"y": 751
+		},
+		{
+			"_uuid": "05d00b1afcce438eb26e49926660d9dd",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_312834ef",
+			"type": "coral_background3",
+			"upside_down": true,
+			"x": 5252,
+			"y": 601
+		},
+		{
+			"_uuid": "06644f86f10a4ffd960c57d499122587",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_788cc84",
+			"rotate": -22.5,
+			"type": "coral_background3",
+			"x": 5616,
+			"y": 769
+		},
+		{
+			"_uuid": "9ceedd9900c5497e85985a64a759461a",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3bd3921b",
+			"rotate": -90.0,
+			"type": "coral_background3",
+			"x": 4477,
+			"y": 1187
+		},
+		{
+			"_uuid": "7f3cc54ea9dd4cb1bde9927ad678acc9",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_6b40ee99",
+			"type": "coral_background1",
+			"x": 4416,
+			"y": 1254
+		},
+		{
+			"_uuid": "10c56661e4b6483f899d334e3b7417ca",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_759492fb",
+			"type": "coral_background1",
+			"x": 3887,
+			"y": 1430
+		},
+		{
+			"_uuid": "9876a6db1456443aa15350c15867914d",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_4bbc0ccb",
+			"type": "coral_background2",
+			"x": 4015,
+			"y": 1311
+		},
+		{
+			"_uuid": "c9b836a6ca2742659ae96b9d4833b110",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5f24aef9",
+			"rotate": 22.5,
+			"type": "coral_background1",
+			"x": 3643,
+			"y": 978
+		},
+		{
+			"_uuid": "4443ab8e4762405fb15b0a06ee41306c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7d07ae69",
+			"rotate": 67.5,
+			"type": "coral_background3",
+			"x": 4069,
+			"y": 859
+		},
+		{
+			"_uuid": "ad6b3880d1f449538d754f471c2dd802",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5fba4e44",
+			"type": "coral_background3",
+			"x": 1264,
+			"y": 1336
+		},
+		{
+			"_uuid": "0300a783f90c4a3bade466440efcc5e9",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_126e0ad1",
+			"type": "coral_background1",
+			"x": 1079,
+			"y": 1433
+		},
+		{
+			"_uuid": "2e937b43b62d43518534be9894b9b54e",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_97306a5",
+			"rotate": 22.5,
+			"type": "coral_background2",
+			"x": 1070,
+			"y": 1281
+		},
+		{
+			"_uuid": "4de6ae85c47b4c3cb97d3f6a96494013",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6217a9a9",
+			"type": "coral_background1",
+			"x": 581,
+			"y": 1210
+		},
+		{
+			"_uuid": "9b2a36b2e5b241b395b8dccf2616f207",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_61b15562",
+			"rotate": 67.5,
+			"type": "coral_background1",
+			"x": 93,
+			"y": 1348
+		},
+		{
+			"_uuid": "f0992630d51d421a853e76674a47e4ba",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_460062a3",
+			"type": "coral_background2",
+			"x": 719,
+			"y": 1212
 		}
 	],
 	"dimensions": [0,-192,8064,1962],
