--- a/data/level/Seaside/rock-a-fort.cfg
+++ b/data/level/Seaside/rock-a-fort.cfg
@@ -2811,6 +2811,127 @@
 			"type": "pricklestalk_green",
 			"x": 2764,
 			"y": -451
+		},
+		{
+			"_uuid": "6d5852473e064486a6e6188d22423d96",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_2893fa37",
+			"rotate": 22.5,
+			"type": "coral_background1",
+			"x": 168,
+			"y": 892
+		},
+		{
+			"_uuid": "8ea572a3ae0640baa6c2be0fcd187a7c",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_1cbcce77",
+			"rotate": 8.458856,
+			"type": "coral_background3",
+			"upside_down": true,
+			"x": 336,
+			"y": 681
+		},
+		{
+			"_uuid": "5ee172caea764e08bdcfd4006041c5d5",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_620ffb99",
+			"type": "coral_background1",
+			"upside_down": true,
+			"x": 2431,
+			"y": 1033
+		},
+		{
+			"_uuid": "36fb64089a66482399e3e60020bbdca9",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_478c9681",
+			"type": "coral_background3",
+			"upside_down": true,
+			"x": 2264,
+			"y": 1201
+		},
+		{
+			"_uuid": "81ca5c10c79e40069b50cc18077f7add",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_c2894a2",
+			"type": "coral_background1",
+			"x": 2875,
+			"y": 1228
+		},
+		{
+			"_uuid": "60316d459e3a43848392d5babe17fe78",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_113c7ce2",
+			"type": "coral_background1",
+			"x": 4322,
+			"y": 922
+		},
+		{
+			"_uuid": "ec45fcc15f474da3bcbe5972da5b992b",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_3cdd1894",
+			"type": "coral_background2",
+			"x": 4220,
+			"y": 928
+		},
+		{
+			"_uuid": "d76477b0bfdc41449f89c61ac11de391",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_4f9b0d6f",
+			"type": "coral_background2",
+			"x": 6090,
+			"y": 876
+		},
+		{
+			"_uuid": "bc7bb283b1ab449d93ec12924008fec3",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_5df4b421",
+			"type": "coral_background3",
+			"x": 5699,
+			"y": 989
+		},
+		{
+			"_uuid": "9f8c5fba48474801a4b704ba89c600d1",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_44d46084",
+			"type": "coral_background1",
+			"x": 6695,
+			"y": 865
+		},
+		{
+			"_uuid": "dfdfc880fa99429e923047dbbfc9583c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_536e2206",
+			"type": "coral_background1",
+			"upside_down": true,
+			"x": 5911,
+			"y": 624
+		},
+		{
+			"_uuid": "36b972f31cac4572b91e4ec800549349",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7564e1bb",
+			"rotate": 22.5,
+			"type": "coral_background2",
+			"x": 6053,
+			"y": 674
 		}
 	],
 	"dimensions": [-704,-896,7586,1440],
