Fixed an issue where fish behaved bizarrely in the (extremely rare) case where they were grabbed underwater with the tongue, brought above water, and spat out.

--- a/data/objects/enemies/fish/fish_green.cfg
+++ b/data/objects/enemies/fish/fish_green.cfg
@@ -104,6 +104,9 @@ object_type: {
 	properties: {
 		taxonomy: "TaxonomyType :: enum fish",
 	},
+
+	on_return_to_normal: "if(underwater, proto_event('throwable_small_enemy','return_to_normal'), force_death() )",
+
 	animation: [
 		{
 			image: "enemies/fish-green.png",
