--- a/data/objects/enemies/fish/fish_purple.cfg
+++ b/data/objects/enemies/fish/fish_purple.cfg
@@ -72,6 +72,9 @@ object_type: {
 	properties: {
 		taxonomy: "TaxonomyType :: enum fish",
 	},
+
+	on_return_to_normal: "if(underwater, proto_event('throwable_small_enemy','return_to_normal'), force_death() )",
+	
 	animation: [
 		{
 			image: "enemies/fish-purple.png",
