--- a/data/objects/props-interactive/npcs/cubeaver_npc.cfg
+++ b/data/objects/props-interactive/npcs/cubeaver_npc.cfg
@@ -3,30 +3,31 @@ id: "cubeaver_npc",
 prototype: ["standing_npc"],
 solid_dimensions: ["npc"],
 solid_area: [6,6,29,29],
-animation: [
-	{
-		image: "npc/cubeaver.png",
-		pad: 3,
-		accel_y: 80,
-		interact_area: "all",
-		duplicates: 3,
-		id: "stand",
-		rect: [1,1,36,33],
-		duration: 7,
-		frames: 3,
-		reverse: true,
-		play_backwards: true,
-	},
-	{
-		image: "npc/cubeaver.png",
-		pad: 3,
-		accel_y: 80,
-		interact_area: "all",
-		id: "stand",
-		rect: [79,1,114,33],
-		duration: 7,
-		frames: 3,
-		reverse: true,
-	},
-],
+animation: [{
+	"@base": true,
+	image: "npc/cubeaver.png",
+	pad: 3,
+	accel_y: 80,
+	interact_area: "all",
+},{
+	duplicates: 3,
+	id: "stand",
+	rect: [1,1,36,33],
+	duration: 7,
+	frames: 3,
+	reverse: true,
+	play_backwards: true,
+},{
+	id: "stand",
+	rect: [79,1,114,33],
+	duration: 7,
+	frames: 3,
+	reverse: true,
+},{
+	id: "talk",
+	rect: [1,45,36,77],
+	duration: 7,
+	frames: 3,
+	reverse: true,
+}],
 }
